--- a/index.html
+++ b/index.html
@@ -4,9 +4,64 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sevillana&display=swap" rel="stylesheet">
   <title>Recreation</title>
 </head>
 <body>
-  
+  <!--
+<header-container>
+  <div class="logo"></div>
+  <div class="nav"></div>
+  <div class="buttons"></div>
+</header-container>
+
+<div class="main-content-top">
+  <div class="main-content-info">
+    <h1></h1>
+    <p></p>
+    <div class="buttons">
+      butoon
+      <button></button>
+    </div>
+  </div>
+  <div class="main-img">
+    <img src="" alt="">
+  </div>
+</div> -->
+<div class="main-container">
+<header>
+  <div>
+    <h1 class="logo-content"><span><img src="images/Logo.png"><img src="images/Productly.png"></span></h1>
+  </div>
+    <nav> 
+      <ul>
+        <li><a href="a">Products</a></li>
+        <li><a href="a">Customer</a></li>
+        <li><a href="a">Pricing</a></li>
+        <li><a href="a">Resources</a></li>
+        </ul>
+    </nav>
+    <div>
+      <button class="in-button">Sign In</button>
+      <button class="up-button">Sign Up</button>
+    </div> 
+</header>
+
+  <!-- first container
+<div>
+  <h2 class="main-title">The Design Thinking Superpowers</h2>
+  <div class="left-side">
+    <div class="main-info">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</div>
+    <div><h3 src="images/jumping.png"></h3></div>
+
+  </div>
+  <div > 2 buttons </div>
+</div>
+ -->
+
+  </div>
 </body>
 </html>
