first block stil defect

--- a/index.html
+++ b/index.html
@@ -11,26 +11,7 @@
   <title>Recreation</title>
 </head>
 <body>
-  <!--
-<header-container>
-  <div class="logo"></div>
-  <div class="nav"></div>
-  <div class="buttons"></div>
-</header-container>
 
-<div class="main-content-top">
-  <div class="main-content-info">
-    <h1></h1>
-    <p></p>
-    <div class="buttons">
-      butoon
-      <button></button>
-    </div>
-  </div>
-  <div class="main-img">
-    <img src="" alt="">
-  </div>
-</div> -->
 <div class="main-container">
 <header>
   <div>
@@ -38,30 +19,33 @@
   </div>
     <nav> 
       <ul>
-        <li><a href="a">Products</a></li>
-        <li><a href="a">Customer</a></li>
-        <li><a href="a">Pricing</a></li>
+        <li><a href="a">Products</a></li><br>
+        <li><a href="a">Customer</a></li><br>
+        <li><a href="a">Pricing</a></li><br>
         <li><a href="a">Resources</a></li>
-        </ul>
+      </ul>
     </nav>
     <div>
       <button class="in-button">Sign In</button>
       <button class="up-button">Sign Up</button>
     </div> 
 </header>
-
-  <!-- first container
-<div>
-  <h2 class="main-title">The Design Thinking Superpowers</h2>
-  <div class="left-side">
-    <div class="main-info">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</div>
-    <div><h3 src="images/jumping.png"></h3></div>
-
+ <div class="starter-block">
+      <div class="main-title">
+        <h1>The Design Thinking superpowers</h1>
+      </div>
+  <div class="main-info">
+    <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
   </div>
-  <div > 2 buttons </div>
+  <div class="buttons">
+      <button class="get-startedbtn">Get started</button>
+      <button class="watch-vidbtn">Watch the video</button>
+  </div>
+  
+  <div class="main-img">
+    <img src="images/jumping.png"> 
+  </div>
+ </div>
 </div>
- -->
-
-  </div>
 </body>
 </html>
