assignment finally done, need help to perfect it

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                   <p>Personal choices and the overall personality of the person. </p>
             </div>
       </section>
-      <div class="signupnow-btn">
-        <button>SIGN UP NOW</button>
+      <div>
+        <button class="signupnow-btn">SIGN UP NOW</button>
       </div>
   </div>
 </section>
@@ -108,7 +108,7 @@
 </section>
 
 <section class="forth-block">
-  <div>
+  <div class="laptop-guy">
     <img src="images/laptopguy.png" alt="">
   </div>
   <div class="manager-part">
@@ -131,6 +131,47 @@
 </section>
 
 <section class="fifth-block">
+  <div class="marketers">
+    <p>Optimisation for</p>
+    <h4>Marketers</h4>
+    <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. </p>
+    <h5>Accessory makers</h5>
+    <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+    <h5>Alterationists</h5>
+    <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+    <h5>Custom Design designers</h5>
+    <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+  </div>
+  <div class="screen-squares">
+    <img src="images/screen-squares.png">
+  </div>
+
+
+</section>
+
+<section class="last-footer">
+  <div class="logo-foot">
+    <img src="images/Logo.png">
+    <img src="images/Productly.png">
+  </div>
+  <div class="nav-answers">
+    <ol>
+      <li>About Us</li>
+      <li>Blog</li>
+      <li>Contact</li>
+      <li>FAQ</li>
+    </ol>
+  </div>
+  
+  <div class="legal-info">
+    <li>Disclaimer</li>
+    <li>Financing</li>
+    <li>Privacy Policy</li>
+    <li>Terms of Service</li>
+  </div>
+  <div class="search-bar">
+    <button class="signupnow2-btn">Sign up Now</button>
+  </div>
 
 
 </section>
