--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sevillana&display=swap" rel="stylesheet">
-  <title>Recreation</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fontawesome.com/icons/play?f=classic&s=solid">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sevillana&display=swap" rel="stylesheet">
+<title>Recreation</title>
 </head>
 <body>
 
@@ -19,10 +20,10 @@
    </div>
     <nav> 
       <ul>
-        <li><a href="a">Products</a></li><br>
-        <li><a href="a">Customer</a></li><br>
-        <li><a href="a">Pricing</a></li><br>
-        <li><a href="a">Resources</a></li>
+        <li><a href="#" alt="main-container">Products</a></li><br>
+        <li><a href="#" alt="main-container">Customer</a></li><br>
+        <li><a href="#" alt="main-container">Pricing</a></li><br>
+        <li><a href="#" alt="main-container">Resources</a></li>
       </ul>
     </nav>
      <div>
@@ -36,8 +37,6 @@
       <h2 class="front-page">The Design Thinking superpowers</h2>
       <div class="main-info">
         <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
-        
-        
       </div>
       <div class="buttons">
         <button class="get-startedbtn">Get started</button>
@@ -155,24 +154,23 @@
     <img src="images/Productly.png">
   </div>
   <div class="nav-answers">
-    <ol>
-      <li>About Us</li>
-      <li>Blog</li>
-      <li>Contact</li>
-      <li>FAQ</li>
-    </ol>
+    <!-- <ol> -->
+      <li><a href="#" alt="main-container"></a>About Us</li>
+      <li><a href="#" alt="main-container"></a>Blog</li>
+      <li><a href="#" alt="main-container"></a>Contact</li>
+      <li><a href="#" alt="main-container"></a>FAQ</li>
+    <!-- </ol> -->
   </div>
   
   <div class="legal-info">
-    <li>Disclaimer</li>
-    <li>Financing</li>
-    <li>Privacy Policy</li>
-    <li>Terms of Service</li>
+    <li><a href="#" alt="main-container">Disclaimer</a></li>
+    <li><a href="#" alt="main-container">Financing</a></li>
+    <li><a href="#" alt="main-container">Privacy Policy</a></li>
+    <li><a href="#" alt="main-container">Terms of Service</a></li>
   </div>
   <div class="search-bar">
     <button class="signupnow2-btn">Sign up Now</button>
   </div>
-
 
 </section>
 
